syntax = "proto3";
package rarifyprotocol.rarimocore.rarimocore;

import "rarimocore/params.proto";

option go_package = "gitlab.com/rarify-protocol/rarimo-core/x/rarimocore/types";

message RemoveParty {
  repeated Party currentSet = 1;
  uint32 partyIndex = 2;
}

